--- a/about_me.html
+++ b/about_me.html
@@ -10,6 +10,7 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Jost:wght@300;400&display=swap" rel="stylesheet">
   <title>Светлана Кесян - дизайнер интерьера</title>
+  <link rel="shortcut icon" type="image/ico" href="fav_final.png" sizes="any" />
 </head>
 <body>
   <header>
@@ -20,13 +21,13 @@
   </div>
   <nav>
     <ul>
-      <li><a href="">Главная</a></li>
-      <li><a href="">О нас</a></li>
+      <li><a href="animation-test.html">Главная</a></li>
+      <li><a href="about_me.html">О нас</a></li>
       <li><a href="">Проекты</a></li>
-      <li><a href="">Контакты</a></li>
+      <li><a href="contacts.html">Контакты</a></li>
     </ul>
   </nav>
-  <div class = "tel">+79891652807</div>
+  <div class = "tel">+79183000355</div>
   </div>
   </header>
   <main>
