--- a/animation-test.html
+++ b/animation-test.html
@@ -22,14 +22,23 @@
         <h2>дизайнер интерьера</h2>
       </div>
       <nav>
-        <ul>
+        <!-- <div class="header_burger">
+          <span></span>
+        </div> -->
+        <div id = "nav" class="ul">
+        <ul class = "nav-list">
           <li><a href="animation-test.html">Главная</a></li>
           <li><a href="about_me.html">О нас</a></li>
           <li><a href="">Проекты</a></li>
           <li><a href="contacts.html">Контакты</a></li>
+          <li><div class="tel">+79891652807</div></li>
         </ul>
+        <button id = "nav-btn" class="nav-button">
+          <img id = "nav-btn-img" src="NAV.svg" alt="">
+        </button>
+        </div>
       </nav>
-      <div class="tel">+79891652807</div>
+      </div>
     </div>
   </header>
 
@@ -44,5 +53,6 @@
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script type="text/javascript" src="animation.js"></script>
 </body>
-
+<script src="js/jquery-2.2.3.min.js"></script>
+<script src = "button.js"></script>
 </html>
