--- a/about_me.html
+++ b/about_me.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="animation.css">
   <link rel="stylesheet" href="about_me.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="stylesheet" href="media_about.css">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Jost:wght@300;400&display=swap" rel="stylesheet">
   <title>Светлана Кесян - дизайнер интерьера</title>
@@ -14,21 +15,26 @@
 </head>
 <body>
   <header>
- <div class = "side-menu">
-  <div class = "side">
-    <h1>Светлана Кесян</h1>
-    <h2>дизайнер интерьера</h2>
-  </div>
-  <nav>
-    <ul>
-      <li><a href="animation-test.html">Главная</a></li>
-      <li><a href="about_me.html">О нас</a></li>
-      <li><a href="">Проекты</a></li>
-      <li><a href="contacts.html">Контакты</a></li>
-    </ul>
-  </nav>
-  <div class = "tel">+79183000355</div>
-  </div>
+    <div class="side-menu">
+      <div class="side">
+        <h1>Светлана Кесян</h1>
+        <h2>дизайнер интерьера</h2>
+      </div>
+      <nav>
+        <div id = "nav" class="ul">
+        <ul class = "nav-list">
+          <li><a href="animation-test.html">Главная</a></li>
+          <li><a href="about_me.html">О нас</a></li>
+          <li><a href="">Проекты</a></li>
+          <li><a href="contacts.html">Контакты</a></li>
+          <li><div class="tel">+79891652807</div></li>
+        </ul>
+        <button id = "nav-btn" class="nav-button">
+          <img id = "nav-btn-img" src="NAV.svg" alt="">
+        </button>
+        </div>
+      </nav>
+      </div>
   </header>
   <main>
     <div class="container">
@@ -43,4 +49,6 @@
     </div>
     </div>
   </main>
+  <script src = "button.js"></script>
 </body>
+</html>
